{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 175,
  "lineage": "8c44358a-137c-7254-ba15-a7f42947f49d",
  "resources": [
    {
      "module": "module.ec2_instances[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0873b46c45c11058d",
            "arn": "arn:aws:ec2:us-west-2:549942532493:instance/i-056ec07c40d0b398b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "app_instance",
            "id": "i-056ec07c40d0b398b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f742b68a55b105f6",
            "private_dns": "ip-10-0-101-228.us-west-2.compute.internal",
            "private_ip": "10.0.101.228",
            "public_ip": "54.187.167.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0532a27a767b354f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db264ccf1c520fa0",
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "Bastion host",
              "Project": "demo",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Bastion host"
            },
            "vpc_security_group_ids": [
              "sg-06ec65913eead3e79"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_instance_profile",
            "data.template_cloudinit_config.github_action",
            "module.app-sg.aws_security_group.this",
            "module.app-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:549942532493:internet-gateway/igw-0b9e963a5e1632a53",
            "id": "igw-0b9e963a5e1632a53",
            "owner_id": "549942532493",
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9e963a5e1632a53",
            "id": "r-rtb-02a01e56a7b53bb261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a01e56a7b53bb26",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03cf5ae7d94ea6d97",
            "owner_id": "549942532493",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc-private",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02a01e56a7b53bb26",
            "owner_id": "549942532493",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9e963a5e1632a53",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc-public",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3c108d36c18168d",
            "route_table_id": "rtb-03cf5ae7d94ea6d97",
            "subnet_id": "subnet-01c2f0d0ced163974"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e777047e134979a7",
            "route_table_id": "rtb-03cf5ae7d94ea6d97",
            "subnet_id": "subnet-0e7a05be91db513c4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb08b16137c8eca1",
            "route_table_id": "rtb-03cf5ae7d94ea6d97",
            "subnet_id": "subnet-0a92b60004e6d2b43"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed010dd9516a01df",
            "route_table_id": "rtb-03cf5ae7d94ea6d97",
            "subnet_id": "subnet-0da8781df2251b4aa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1e4bc1010646917",
            "route_table_id": "rtb-02a01e56a7b53bb26",
            "subnet_id": "subnet-0db264ccf1c520fa0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cc96b0e9ddd42ca",
            "route_table_id": "rtb-02a01e56a7b53bb26",
            "subnet_id": "subnet-0973c192c02353fcb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:549942532493:security-group/sg-06ec65913eead3e79",
            "description": "Security group with HTTP ports open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ec65913eead3e79",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.101.0/24",
                  "10.0.102.0/24"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.101.0/24",
                  "10.0.102.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "APP-SG-20200818031411390500000003",
            "name_prefix": "APP-SG-",
            "owner_id": "549942532493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "APP-SG",
              "Project": "demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-332451742",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06ec65913eead3e79",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.app-sg.aws_security_group.this",
            "module.app-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.101.0/24",
              "10.0.102.0/24"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2029752764",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ec65913eead3e79",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.app-sg.aws_security_group.this",
            "module.app-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.101.0/24",
              "10.0.102.0/24"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-296910633",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ec65913eead3e79",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.app-sg.aws_security_group.this",
            "module.app-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:549942532493:subnet/subnet-01c2f0d0ced163974",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-01c2f0d0ced163974",
            "map_public_ip_on_launch": false,
            "owner_id": "549942532493",
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc-db-us-west-2a",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:549942532493:subnet/subnet-0e7a05be91db513c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-0e7a05be91db513c4",
            "map_public_ip_on_launch": false,
            "owner_id": "549942532493",
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc-db-us-west-2b",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:549942532493:subnet/subnet-0a92b60004e6d2b43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a92b60004e6d2b43",
            "map_public_ip_on_launch": false,
            "owner_id": "549942532493",
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc-private-us-west-2a",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:549942532493:subnet/subnet-0da8781df2251b4aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0da8781df2251b4aa",
            "map_public_ip_on_launch": false,
            "owner_id": "549942532493",
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc-private-us-west-2b",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:549942532493:subnet/subnet-0db264ccf1c520fa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0db264ccf1c520fa0",
            "map_public_ip_on_launch": true,
            "owner_id": "549942532493",
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc-public-us-west-2a",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:549942532493:subnet/subnet-0973c192c02353fcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0973c192c02353fcb",
            "map_public_ip_on_launch": true,
            "owner_id": "549942532493",
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc-public-us-west-2b",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-057c55b818455ba20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:549942532493:vpc/vpc-057c55b818455ba20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0046dab2dd1354192",
            "default_route_table_id": "rtb-08b87e547f4947f02",
            "default_security_group_id": "sg-079f3fa7fb73e02b9",
            "dhcp_options_id": "dopt-73f1090b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-057c55b818455ba20",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08b87e547f4947f02",
            "owner_id": "549942532493",
            "tags": {
              "Application": "nodejs",
              "Environment": "dev",
              "Name": "tf13-vpc",
              "Project": "demo",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}